# Corewar

./: Makefile  a.out  and.c  corewar  corewar.h  iss.c  lfork.c  lld.c  main_alg.c  parser.c  print_map.c  printf.h  proves.c  set_movement.c  temp_main.c  vovan.cor
champs/: test.s
includes/: .corewar.h.swp  .op.h.swp  corewar.h  head.h  op.h  oper.h
sources/: .ft_work_flag.c.swp  ft_validate.c  ft_work_flag.c  main.c
srcs/: CMakeLists.txt  temp_main.c
srcs/proves/: a.out  asd  corewar.h  forcat  help_main_alg.c  help_parser.c  live.c  log  main_alg.c  parser.c  print_byte_hex.c  print_map.c  temp_main.c
srcs/proves/a.out.dSYM/Contents/Resources/DWARF/: a.out
